templates/bpa_template.yaml
---
# Source: bpa/charts/postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-headless
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.16.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
---
# Source: bpa/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.16.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    role: primary
---
# Source: bpa/templates/acapy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-bpa-acapy
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-acapy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8030
      targetPort: http
      protocol: TCP
      name: http
    - port: 8031
      targetPort: admin
      protocol: TCP
      name: admin      
  selector:
    app.kubernetes.io/name: release-name-bpa-acapy
    app.kubernetes.io/instance: release-name
---
# Source: bpa/templates/bpa_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-bpa-core
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: release-name-bpa-core
    app.kubernetes.io/instance: release-name
---
# Source: bpa/templates/acapy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-bpa-acapy
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-acapy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name-bpa-acapy
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: 92c4c121be301ab59ec432f3e8084bb4d6d67647bf379df1427bc7473c3cb3b1
      labels:
        app.kubernetes.io/name: release-name-bpa-acapy
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      containers:
        - name: acapy
          securityContext:
            runAsUser: 1001
          image: "bcgovimages/aries-cloudagent:py36-1.16-1_0.7.4"
          imagePullPolicy: IfNotPresent
          args: [
           "-c",
           "aca-py start \
           --arg-file acapy-static-args.yml \
           --inbound-transport http '0.0.0.0' 8030 \
           --genesis-transactions-list genesis-transaction-list.yaml \
           --endpoint https://release-name-bpa-acapy.bpa \
           --wallet-storage-type 'postgres_storage' \
           --wallet-name mywallet \
           --wallet-key 123 \
           --wallet-storage-config '{\"url\":\"release-name-postgresql:5432\",\"max_connections\":5}' \
           --wallet-storage-creds '{\"account\":\"postgres\",\"password\":\"$(POSTGRES_PASSWORD)\"}' \
           --admin '0.0.0.0' 8031 \
           --admin-api-key 2f9729eef0be49608c1cffd49ee3cc4a \
           --label release-name \
           "
          ]
          command:
          - /bin/bash
          ports:
            - name: http
              containerPort: 8030
              protocol: TCP
            - name: admin
              containerPort: 8031
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status/live
              port: 8031
            initialDelaySeconds: 45
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /status/ready
              port: 8031
            initialDelaySeconds: 20
            periodSeconds: 10    
          volumeMounts:
          - name: config
            mountPath: "/home/indy/acapy-static-args.yml"
            subPath: "acapy-static-args.yml"
            readOnly: true
          - name: ledger
            mountPath: "/home/indy/genesis-transaction-list.yaml"
            subPath: "genesis-transaction-list.yaml"
            readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: release-name-bpa-acapy
            items:
            - key: "acapy-static-args.yaml"
              path: "acapy-static-args.yml"
        - name: ledger
          configMap:
            name: release-name-bpa-acapy
            items:
            - key: "genesis-transaction-list.yaml"
              path: "genesis-transaction-list.yaml"
---
# Source: bpa/templates/bpa_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-bpa-core
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name-bpa-core
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: 058fdd807ec21ee89fc43e9cd5289c89a3e8acfb447424a47130b67e335ba5ee
        checksum/configSchemas: 7e6d7ca9bd37e42faabbea801e5def436bda834d63d98071df8d73691d9c8508
      labels:
        app.kubernetes.io/name: release-name-bpa-core
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-bpa-core
      securityContext:
        {}
      containers:
        - name: bpa
          securityContext:
            {}
          image: "ghcr.io/hyperledger-labs/business-partner-agent-new:sha-c2b76ca"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10  
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20   
          volumeMounts:
            - name: config-schemas
              mountPath: "/home/indy/schemas.yml"
              subPath: "schemas.yml"
              readOnly: true
            
            
          resources:
            limits:
              cpu: "2"
              memory: 384Mi
            requests:
              cpu: "0.2"
              memory: 384Mi
      volumes:
        - name: config-schemas
          configMap:
            name: release-name-bpa-core-schemas
            items:
            - key: "schemas.yml"
              path: "schemas.yml"
---
# Source: bpa/charts/postgresql/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.16.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
  namespace: default
spec:
  serviceName: release-name-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: release-name
      role: primary
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-10.16.2
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        role: primary
        app.kubernetes.io/component: primary
    spec:      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      automountServiceAccountToken: false
      containers:
        - name: release-name-postgresql
          image: docker.io/bitnami/postgresql:12
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -d "dbname=postgres" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -d "dbname=postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: data
          emptyDir: {}
---
# Source: bpa/templates/acapy_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-bpa-acapy
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-acapy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "release-name-bpa-acapy.bpa"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-bpa-acapy
                port:
                  number: 8030
---
# Source: bpa/templates/bpa_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-bpa-core
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "release-name-bpa.bpa"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-bpa-core
                port:
                  number: 80
---
# Source: bpa/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-bpa-test-connection"
  labels:
    helm.sh/chart: bpa-0.12.4
    app.kubernetes.io/name: release-name-bpa-core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "sha-c2b76ca"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-bpa-core:80/user/signin']
  restartPolicy: Never
